--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link rel="manifest" href="./public/manifest.json">
     <link rel="icon" href="./public/favicon.ico">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device.width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Kiwi Web</title>
 </head>
 <body style="margin:0; padding:0;">
